# 2D-particle-sim

./: .gitignore  BATCHED_RENDERING_DEMO.md  CMakeLists.txt  README.md
.cursor/rules/project-standards/: RULE.md
src/: batched_rendering_demo.cpp  main.cpp  particle.hpp  particle_simulation.cpp  particle_simulation.hpp  physics.hpp  utils.hpp
